--- a/styles.css
+++ b/styles.css
@@ -9,30 +9,37 @@
     width: 400px;
 }
 .container{
-    height: 100vh;
+    height: 90vh;
     width: 100vw;
     background-color: #fefefe;
 }
 .review{
+    position: relative;
     background-color: #ffff;
     text-align: center;
     border: solid 3px none;
     width: 50%;
-    height: 60%;
+    height: 80%;
     margin: auto auto;
     margin-top: 5%;
-    padding: 50px 60px;
+    padding: 50px 0 0 0;
     border-radius: 30px;
-    box-shadow: rgb(38, 57, 77) 0px 20px 30px -10px;
+    box-shadow: #150050 0px 20px 30px -10px;
 
 }
+.image-container{
+    margin: auto auto;
+}
 .title{
+    box-sizing: border-box;
     text-align: center;
     font-family: 'Poiret One', cursive;
     color: #150050;
+    padding-top: 5vh;
 }
 .title > h2{
-    margin-top: 120px;
+    box-sizing: border-box;
+    /* margin-top: 100px; */
     font-size: 4rem;
 }
 #author{
@@ -48,6 +55,9 @@
     color: #3F0071;
 
 }
+.text-container{
+    height: 300px;
+}
 .info{
     font-family: 'Nunito', sans-serif;
     font-family: 'Poiret One', cursive;
@@ -60,7 +70,8 @@
 }
 .btn{
     border: solid 3px #FB2576;
-    background-color: #ffff;
+    background-color: #fcc5da;
+    color: #FB2576;
     cursor: pointer;
     transition: all .3s ease-in-out;
 
@@ -75,7 +86,15 @@
     width: 50px;
     border-radius: 50%;
     margin-left: 15px;
+    margin-right: 15px;
     font-size: 1.5rem;
+}
+.btn-container{
+    width: 100%;
+    height: 25%;
+    position: absolute;
+    border-radius: 0 0 30px 30px;
+    bottom: 0;
 }
 .random{
     display: block;
